Tue Oct 23 14:40:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Signal_Test.cpp:
          Use ACE_ERROR_RETURN instead of ACE_ASSERT which causes a VxWorks
          target to hang

Tue Oct 23 14:10:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          Sendfile_Test will not work on VxWorks kernel mode, we don't have
          sendfile but we also lack mmap for the emulation

Tue Oct 23 13:57:30 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/run_test.pl: Changed handling of tests in subdirectories to
          chdir to the subdirectory to run the test; allows tests to pick up
          files they need (like keys and ciphers). This places the test's
          log under its subdirectory (e.g. SSL/log) as well.

Tue Oct 23 13:51:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.{h,cpp,inl}:
          Use ACE_HAS_VXTHREADS, use bool, doxygen improvements and
          improved ACE_OS::thr_equal to guard against an unitialized
          ACE_thread_t which is a 0 pointer on VxWorks. This fixes then
          the crash of the Reader_Writer_Test in our daily regression
          suite

        * tests/Reader_Writer_Test.cpp:
          Use prefix increment/decrement, also use a long for the counts,
          these are implemented in assembly on most architectures

Tue Oct 23 13:17:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks6.2.h:
        * ace/config-vxworks6.3.h:
        * ace/config-vxworks6.4.h:
          VxWorks 6.x doesn't have perfect multicast filtering

        * ace/FILE_Addr.h:
        * ace/FILE_IO.h:
          Doxygen fixes

        * ace/Lib_Find.cpp:
          Use prefix increment

Tue Oct 23 10:41:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Asynch_Connector.h:
          Fixed some missing bool usage

        * ace/Asynch_Acceptor.{h,cpp}: